접근성 수정 및 hidden 처리 추가

--- a/tab/index.html
+++ b/tab/index.html
@@ -19,9 +19,9 @@
     <span class="tab__highlight"></span>
 </div>
 <div class="tab-content">
-    <div class="tab-content__fir" tabindex="0" role="tabpanel" aria-labelledby="tabButton01">123</div>
-    <div class="tab-content__sec" tabindex="0" role="tabpanel" aria-labelledby="tabButton02">asd</div>
-    <div class="tab-content__thr" tabindex="0" role="tabpanel" aria-labelledby="tabButton03">zxc</div>
+    <div class="tab-content__on" tabindex="0" role="tabpanel" aria-labelledby="tabButton01">123</div>
+    <div tabindex="0" role="tabpanel" aria-labelledby="tabButton02" hidden>asd</div>
+    <div tabindex="0" role="tabpanel" aria-labelledby="tabButton03" hidden>zxc</div>
 </div>
 </body>
 </html>
